# cli-git-summarize

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_push_flow.txt
.qwen/: settings.json  settings.json.orig
git-summarize/: .gitignore  README.md  pyproject.toml
git-summarize/src/git_summarize/: __init__.py  cli.py  config.py  git_reader.py  main.py  ui.py
git-summarize/src/git_summarize/providers/: __init__.py  base.py  claude.py  openai.py
git-summarize/tests/: __init__.py  test_config.py  test_git_reader.py  test_prompt_builder.py  test_providers.py
src/git_summarize/: __init__.py  cli.py  config.py  git_ops.py  parser.py  prompt_builder.py  ui.py
src/git_summarize/providers/: __init__.py  gemini.py  ollama.py
tests/: test_cli.py  test_parser.py  test_ui.py
