[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-summarize"
version = "1.0.0"
description = "AI-powered Git commit message generator using conventional commits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Git Summarize Contributors"}
]
keywords = ["git", "commit", "ai", "cli", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gcm = "git_summarize.main:app"
git-summarize = "git_summarize.main:app"

[project.urls]
Homepage = "https://github.com/git-summarize/git-summarize"
Repository = "https://github.com/git-summarize/git-summarize"
Issues = "https://github.com/git-summarize/git-summarize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/git_summarize"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/git_summarize --cov-report=term-missing"
asyncio_mode = "auto"
